# beehive-ai

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  index.html  mkdocs.yml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-linux.yml  ci-macos.yml  python-publish.yml
advanced/custom_invokable/: index.html
advanced/reasoning/: index.html
beehive/: constants.py  message.py
beehive/cookbook/: cot_reflection.ipynb
beehive/invokable/: agent.py  base.py  beehive.py  cot_reflection_agent.py  debate.py  ensemble.py  executor.py  langchain_agent.py  react_agent.py  reasoning_agent.py  team.py  types.py  utils.py
beehive/memory/: db_storage.py  feedback_storage.py
beehive/mixins/: langchain.py
beehive/models/: __init__.py  base.py  openai_embedder.py  openai_model.py
beehive/prompts/: __init__.py  agent_system_message_prompt.txt  ask_question_prompt.txt  context_prompt_concise.txt  context_prompt_full.txt  cot_reflection_prompt.txt  debate_judge_prompt.txt  debate_judge_summary_prompt.txt  ensemble_func_summary_prompt.txt  ensemble_llm_summary_prompt.txt  evaluation_prompt.txt  feedback_prompt.txt  long_form_debate_prompt.txt  model_error_prompt.txt  reasoning_prompt.txt  router_prompting_prompt.txt  router_question_prompt.txt  router_routing_prompt.txt  synthesizer_prompt.txt
beehive/tests/: conftest.py  mocks.py  parser_common.py  (+11 more)
cookbook/: index.html
docs/: cookbook.md  getting_started.md  index.md
getting_started/: index.html
search/: search_index.json
(+24 files in other folders)
