[metadata]
name = beehive-ai
description = ðŸ Create powerful, collaborative AI applications.
long_description_content_type = text/markdown
long_description = file: README.md
version = 0.0.1dev0
author = Mihir Trivedi
author_email = mtrivedi50@gmail.com
license = Apache-2.0
license_files = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3.12

[options]
packages=find_namespace:
include_package_data=True
install_requires =
    openai==1.40.5
    pydantic==2.8.2
    pydantic-settings==2.5.2
    pydantic_core==2.20.1
    rich==13.7.1
    SQLAlchemy==2.0.32
    sqlmodel==0.0.21
    chromadb==0.5.11
    langchain==0.3.1
    langchain-community==0.3.1
    langchain-core==0.3.6
    langchain-experimental==0.3.2
    langchain-openai==0.2.1
    langchain-text-splitters==0.3.0
    nltk==3.9.1
python_requires = >=3.11
zip_safe = no

[options.extras_require]
dev =
    mypy>=1.11
    pytest>=7
    mkdocs==1.6.1
    mkdocs-material==9.5.39
    sqlalchemy2-stubs==0.0.2a38
    pre-commit==3.8.0


[flake8]
ignore = E124, E128
max-line-length = 88
count = true
